[package]
name = "plankton"
version = "0.1.1"
description = "DISCONTINUED PROJECT --- read README for ownership transfer"
repository = "https://github.com/coastalwhite/plankton"
license = "MIT OR Apache-2.0"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
edition = "2018"
keywords = ["image", "compression"]
categories = ["multimedia::images", "algorithms"]

[dependencies]
